Added fontEditor and fontCompiler in settings form and settings controller

--- a/src/main/resources/z64sim.properties
+++ b/src/main/resources/z64sim.properties
@@ -8,3 +8,6 @@ z64sim.ui.defaultLanguage=en
 
 z64sim.log.level=warn
 z64sim.log.showDateTime=true
+
+z64sim.ui.fontSizeEditor=18
+z64sim.ui.fontSizeCompiler=12
