--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -43,3 +43,5 @@ gui.save.file=Save file
 gui.assemble.program=Assemble program
 gui.step.instruction=Step instruction
 gui.run.program=Run program
+font.editor=Font editor
+font.compiler=Font compiler
